[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yatzy-kata"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/yatzy --cov-report=html --cov-fail-under=85"

[tool.coverage.run]
source = ["src/yatzy"]

[tool.setuptools.packages.find]
where = ["src"]